--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,3 @@
-beautifulsoup4==4.9.3
-Kodistubs==19.0.2
-pytest==6.2.3
-requests==2.25.1
-urllib3==1.26.4
-lxml==4.6.3
+pytest==6.2.5
+black
+parameterized
